--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,17 @@ services:
       - POSTGRES_USER=adminator
       - POSTGRES_DB=adminator.new
 
+  adminer:
+    image: adminer
+    ports:
+      - 8081:8080
+    environment:
+      - ADMINER_DEFAULT_SERVER=mysql
+      - MYSQL_DATABASE=adminator2
+      - MYSQL_ROOT_PASSWORD=isp-net-passwd
+    depends_on:
+      - mysql
+ 
   # otel-collector:
   #   deploy:
   #     resources:
