--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -7,11 +7,15 @@
 	ErrorLog ${APACHE_LOG_DIR}/adminator3-error.log
 	CustomLog ${APACHE_LOG_DIR}/adminator3-access.log combined
 
+    RewriteRule   "/adminator2" "/" [R]
+    RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
+
     <Directory /var/www/html/adminator3>
-            Options Indexes FollowSymLinks
-            AllowOverride None
-            Require all granted
+        Options Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
     </Directory>
+
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
