--- a/configs/apache2/vhosts/001-adminator2.conf
+++ b/configs/apache2/vhosts/001-adminator2.conf
@@ -17,6 +17,9 @@
         AllowOverride All
         Require all granted
     </Directory>
+    <Directory /var/www/html/adminator2/smarty>
+        Require all denied
+    </Directory>
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
