--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,11 @@ services:
       - POSTGRES_PASSWD=isp-net-passwd
       - POSTGRES_DB=adminator.new
     tmpfs:
+      # for smarty
       - /var/www/html/adminator2/templates_c:uid=33,gid=33
       - /var/www/html/adminator3/templates_c:uid=33,gid=33
+      # for nette loader
+      - /var/www/html/adminator3/temp:uid=33,gid=33
     ports:
       - "8080:80"
 
