--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -9,6 +9,8 @@
 
     RewriteRule   "/adminator2" "/" [R]
     RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
+    # RewriteRule   ^/img/cal.gif$  /img2/cal.gif
+    RewriteRule ^/img/(.+)\.(jpeg|jpg|png|mp4|webm|ogv|gif)$ img2/$1.$2 [QSA,L]
 
     <Directory /var/www/html/adminator3>
         Options Indexes FollowSymLinks
