--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -7,18 +7,28 @@
 	ErrorLog ${APACHE_LOG_DIR}/adminator3-error.log
 	CustomLog ${APACHE_LOG_DIR}/adminator3-access.log combined
 
+    RewriteEngine on
     RewriteRule   "/adminator2" "/" [R]
     RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
     RedirectMatch ^/img/(.*\.(jpg|png|gif))$ /img2/$1
 
     <Directory /var/www/html/adminator3>
-        Options Indexes FollowSymLinks
+        Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         Require all granted
     </Directory>
     <Directory /var/www/html/adminator3/smarty>
         Require all denied
     </Directory>
+    <Directory /var/www/html/adminator3/models>
+        Require all denied
+    </Directory>
+    <Directory /var/www/html/adminator3/templates>
+        Require all denied
+    </Directory>
+    <Directory /var/www/html/adminator3/templates_c>
+        Require all denied
+    </Directory>        
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
