--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - /var/www/html/adminator3/templates_c:uid=33,gid=33
       # for nette loader
       - /var/www/html/adminator3/temp:uid=33,gid=33
+      # monolog
+      - /var/www/html/a3-logs:uid=33,gid=33
     ports:
       - "8080:80"
 
