--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -2,6 +2,8 @@
     "require": {
         "nette/robot-loader": "3.1.4",
         "smarty/smarty": "2.6.33",
-        "nikic/fast-route": "1.3.0"
+        "nikic/fast-route": "1.3.0",
+        "slim/slim": "3.*",
+        "monolog/monolog": "^1.17"
     }
 }
