--- a/configs/php/local.ini
+++ b/configs/php/local.ini
@@ -3,7 +3,7 @@ date.timezone = "UTC"
 ; display_errors = Off
 log_errors = On
 ; error_log = /proc/self/fd/2
-error_log = /dev/stderr
+error_log = /var/log/php/error.log
 
 log_errors_max_len = 0
 ; error_reporting =  E_ALL & ~E_NOTICE & ~E_STRICT
