--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -4,6 +4,7 @@
         "smarty/smarty": "2.6.33",
         "nikic/fast-route": "1.3.0",
         "slim/slim": "3.*",
+        "bryanjhv/slim-session": "~3.0",
         "monolog/monolog": "^1.17"
     }
 }
