--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -5,6 +5,16 @@
         "nikic/fast-route": "1.3.0",
         "slim/slim": "3.*",
         "bryanjhv/slim-session": "~3.0",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.17",
+        "illuminate/database": "^5.2",
+        "slim/twig-view": "^2.1",
+        "slim/csrf": "^0.6.0",
+        "slim/flash": "^0.1.0",
+        "respect/validation": "^1.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
