rework noLogin page

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ extras/documentation
 /adminator2/export/
 /adminator3/templates_c/
 
-mysql-db-init*.sql
 postgres-db-init-adminator-new.sql
+
 adminator3/.php_cs.cache
+docker-compose.yml
