--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -1,20 +1,19 @@
 {
-    "require": {
-        "nette/robot-loader": "3.1.4",
-        "smarty/smarty": "2.6.33",
-        "nikic/fast-route": "1.3.0",
-        "slim/slim": "3.*",
-        "bryanjhv/slim-session": "~3.0",
-        "monolog/monolog": "^1.17",
-        "illuminate/database": "^5.2",
-        "slim/twig-view": "^2.1",
-        "slim/csrf": "^0.6.0",
-        "slim/flash": "^0.1.0",
-        "respect/validation": "^1.0"
-    },
     "config": {
         "allow-plugins": {
             "kylekatarnls/update-helper": true
         }
+    },
+    "require": {
+        "nette/robot-loader": "3.1.4",
+        "smarty/smarty": "2.6.33",
+        "slim/slim": "3.*",
+        "slim/twig-view": "^2.5.1",
+        "slim/csrf": "^0.6.0",
+        "slim/flash": "^0.1.0",
+        "monolog/monolog": "^1.17",
+        "respect/validation": "^1.0",
+        "formr/formr": "1.4.6",
+        "illuminate/database": "^5.2"
     }
 }
