--- a/configs/php/local.ini
+++ b/configs/php/local.ini
@@ -6,7 +6,7 @@ log_errors = On
 error_log = /var/log/php/error.log
 
 log_errors_max_len = 0
-; error_reporting =  E_ALL & ~E_NOTICE & ~E_STRICT
+error_reporting =  E_ALL & ~E_NOTICE & ~E_STRICT  & ~E_DEPRECATED;
 ; E_ALL & ~E_NOTICE & ~E_STRICT
 
 ; xdebug.idekey = docker
