--- a/configs/apache2/vhosts/001-adminator2.conf
+++ b/configs/apache2/vhosts/001-adminator2.conf
@@ -6,11 +6,10 @@
 
 	ErrorLog ${APACHE_LOG_DIR}/adminator2-error.log
 	CustomLog ${APACHE_LOG_DIR}/adminator2-access.log combined
-
-        
+    
     RewriteEngine on
     RewriteRule   "/adminator2" "/" [R]
-    RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
+    # RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
 
     <Directory /var/www/html/adminator2>
         Options Indexes FollowSymLinks
