--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -4,8 +4,8 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/adminator3
 
-	ErrorLog ${APACHE_LOG_DIR}/adminator3-error.log
-	CustomLog ${APACHE_LOG_DIR}/adminator3-access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/adminator/adminator3-error.log
+	CustomLog ${APACHE_LOG_DIR}/adminator/adminator3-access.log combined
 
     RewriteEngine on
     RewriteRule   "/adminator2" "/" [R]
