--- a/configs/apache2/vhosts/001-adminator2.conf
+++ b/configs/apache2/vhosts/001-adminator2.conf
@@ -4,8 +4,8 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/adminator2
 
-	ErrorLog ${APACHE_LOG_DIR}/adminator2-error.log
-	CustomLog ${APACHE_LOG_DIR}/adminator2-access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/adminator/adminator2-error.log
+	CustomLog ${APACHE_LOG_DIR}/adminator/adminator2-access.log combined
     
     RewriteEngine on
     RewriteRule   "/adminator2" "/" [R]
