--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
-	ServerName adminator3.127.0.0.1.nip.io
+	# ServerName adminator3.127.0.0.1.nip.io
+	ServerName adminator3.192.168.1.213.nip.io
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/adminator3
