fix a2 topology & platby pages (#43)

--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -1,11 +1,12 @@
 <VirtualHost *:80>
-	ServerName adminator3.127.0.0.1.nip.io
+	# ServerName adminator3.127.0.0.1.nip.io
+	ServerName adminator3.192.168.1.213.nip.io
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/adminator3
 
-	ErrorLog ${APACHE_LOG_DIR}/adminator3-error.log
-	CustomLog ${APACHE_LOG_DIR}/adminator3-access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/adminator/adminator3-error.log
+	CustomLog ${APACHE_LOG_DIR}/adminator/adminator3-access.log combined
 
     RewriteEngine on
     RewriteRule   "/adminator2" "/" [R]
