--- a/configs/apache2/vhosts/001-adminator2.conf
+++ b/configs/apache2/vhosts/001-adminator2.conf
@@ -1,16 +1,16 @@
 <VirtualHost *:80>
-	ServerName adminator2.127.0.0.1.nip.io
+	# ServerName adminator2.127.0.0.1.nip.io
+    ServerName adminator2.192.168.1.213.nip.io
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/adminator2
 
-	ErrorLog ${APACHE_LOG_DIR}/adminator2-error.log
-	CustomLog ${APACHE_LOG_DIR}/adminator2-access.log combined
-
-        
+	ErrorLog ${APACHE_LOG_DIR}/adminator/adminator2-error.log
+	CustomLog ${APACHE_LOG_DIR}/adminator/adminator2-access.log combined
+    
     RewriteEngine on
     RewriteRule   "/adminator2" "/" [R]
-    RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
+    # RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
 
     <Directory /var/www/html/adminator2>
         Options Indexes FollowSymLinks
