--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,17 +24,19 @@ services:
     # user: "www-data:www-data"
     environment:
       #
-      - MYSQL_SERVER=mysql
+      - MYSQL_SERVER=192.168.1.213
       - MYSQL_USER=root
       - MYSQL_PASSWD=isp-net-passwd
       #
-      - POSTGRES_SERVER=postgres
+      - POSTGRES_SERVER=192.168.1.213
       - POSTGRES_USER=adminator
       - POSTGRES_PASSWD=isp-net-passwd
       - POSTGRES_DB=adminator.new
     volumes:
       - adminator-php-log:/var/log/php:uid=33,gid=33
     tmpfs:
+      # apache logs
+      - /var/log/apache2/adminator:uid=33,gid=33
       # for smarty
       - /var/www/html/adminator2/templates_c:uid=33,gid=33
       - /var/www/html/adminator3/templates_c:uid=33,gid=33
@@ -85,7 +87,7 @@ services:
     ports:
       - 8081:8080
     environment:
-      - ADMINER_DEFAULT_SERVER=mysql
+      - ADMINER_DEFAULT_SERVER=192.168.1.213
       - MYSQL_DATABASE=adminator2
       - MYSQL_ROOT_PASSWORD=isp-net-passwd
     depends_on:
