--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -5,15 +5,15 @@
         }
     },
     "require": {
-        "nette/robot-loader": "3.1.4",
-        "smarty/smarty": "2.6.33",
+        "nette/robot-loader": "^3.4",
+        "smarty/smarty": "^3.1",
         "slim/slim": "3.*",
-        "slim/twig-view": "^2.5.1",
-        "slim/csrf": "^0.6.0",
-        "slim/flash": "^0.1.0",
-        "monolog/monolog": "^1.17",
-        "respect/validation": "^1.0",
-        "formr/formr": "1.4.6",
-        "illuminate/database": "^5.2"
+        "slim/twig-view": "^2.5",
+        "slim/csrf": "^0.8.0",
+        "slim/flash": "^0.4.0",
+        "monolog/monolog": "^1.27.1",
+        "respect/validation": "^1.1",
+        "formr/formr": "1.4",
+        "illuminate/database": "^5.8"
     }
 }
