--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -15,13 +15,14 @@
         "respect/validation": "^1.1",
         "formr/formr": "^1.4",
         "illuminate/database": "^5.8",
-        "jeremykendall/password-validator": "3.*",
+        "jeremykendall/password-validator": "3.0.4",
         "zendframework/zend-authentication": "2.*",
         "zendframework/zend-permissions-acl": "2.*",
         "zendframework/zend-session": "2.*",
         "marcelbonnet/slim-auth": "^2.0",
         "doctrine/orm": "^2.11.0",
         "symfony/cache": "^4.4",
-        "doctrine/annotations": "^1.13.0"
+        "doctrine/annotations": "^1.13.0",
+        "akrabat/rka-slim-session-middleware": "2.0.0-RC1"
     }
 }
