--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -9,11 +9,15 @@
         "smarty/smarty": "^3.1",
         "slim/slim": "3.*",
         "slim/twig-view": "^2.5",
-        "slim/csrf": "^0.8.0",
+        "slim/csrf": "^0.8",
         "slim/flash": "^0.4.0",
         "monolog/monolog": "^1.27.1",
         "respect/validation": "^1.1",
-        "formr/formr": "1.4",
-        "illuminate/database": "^5.8"
+        "formr/formr": "^1.4",
+        "illuminate/database": "^5.8",
+        "doctrine/orm": "^2.11.0",
+        "doctrine/annotations": "^1.13.0",
+        "symfony/cache": "^4.4",
+        "marcelbonnet/slim-auth": "^2.0"
     }
 }
