--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - /var/www/html/adminator2/templates_c:uid=33,gid=33
       - /var/www/html/adminator3/templates_c:uid=33,gid=33
       # for nette loader
+      - /var/www/html/adminator2/temp:uid=33,gid=33
       - /var/www/html/adminator3/temp:uid=33,gid=33
       # monolog
       - /var/www/html/a3-logs:uid=33,gid=33
