--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -18,6 +18,7 @@
         "doctrine/orm": "^2.11.0",
         "doctrine/annotations": "^1.13.0",
         "symfony/cache": "^4.4",
-        "marcelbonnet/slim-auth": "^2.0"
+        "marcelbonnet/slim-auth": "^2.0",
+        "setasign/fpdf": "1.8.6"
     }
 }
