--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ volumes:
   mysql-data:
   postgres-data:
   pgadmin-data:
+  mssql-data:
 
 networks:
   default:
@@ -72,17 +73,6 @@ services:
       - mysql-data:/var/lib/mysql
       # - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
-  postgres:
-    image: postgres:12-alpine
-    ports:
-      - 5432:5432
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=isp-net-passwd
-      - POSTGRES_USER=adminator
-      - POSTGRES_DB=adminator.new
-
   adminer:
     image: adminer
     ports:
@@ -93,6 +83,17 @@ services:
       - MYSQL_ROOT_PASSWORD=isp-net-passwd
     depends_on:
       - mysql
+  
+  postgres:
+    image: postgres:12-alpine
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=isp-net-passwd
+      - POSTGRES_USER=adminator
+      - POSTGRES_DB=adminator.new
  
   # fix permissions: echo "host all all all $POSTGRES_HOST_AUTH_METHOD" >> pg_hba.conf
   pgadmin:
@@ -107,6 +108,19 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
+  mssql:
+    container_name: sql-server
+    image: mcr.microsoft.com/mssql/server:2017-latest
+    #image: mcr.microsoft.com/mssql/server:2017-CU11-ubuntu
+    restart: always
+    environment:
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "Password123"
+    ports:
+      - 1433:1433
+    volumes:
+      - mssql-data:/var/opt/mssql
+  
   # otel-collector:
   #   deploy:
   #     resources:
