--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,12 +109,12 @@ services:
       - pgadmin-data:/var/lib/pgadmin
 
   mssql:
-    image: mcr.microsoft.com/mssql/server:2017-latest
+    image: mcr.microsoft.com/mssql/server:2019-latest
     #image: mcr.microsoft.com/mssql/server:2017-CU11-ubuntu
     restart: always
     environment:
       ACCEPT_EULA: "Y"
-      SA_PASSWORD: "Password123"
+      MSSQL_SA_PASSWORD: "Password123"
     ports:
       - 1433:1433
     volumes:
