--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -6,7 +6,7 @@
     },
     "require": {
         "nette/robot-loader": "^3.4",
-        "smarty/smarty": "^v4.5.2",
+        "smarty/smarty": "^4.5.2",
         "slim/slim": "3.*",
         "slim/twig-view": "^2.5",
         "slim/csrf": "^0.8",
