--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -18,6 +18,12 @@
         AllowOverride All
         Require all granted
     </Directory>
+    <Directory /var/www/html/adminator3/app>
+        Require all denied
+    </Directory>
+    <Directory /var/www/html/adminator3/include>
+        Require all denied
+    </Directory>
     <Directory /var/www/html/adminator3/smarty>
         Require all denied
     </Directory>
