--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -30,10 +30,16 @@
     <Directory /var/www/html/adminator3/models>
         Require all denied
     </Directory>
+    <Directory /var/www/html/adminator3/resources>
+        Require all denied
+    </Directory>
     <Directory /var/www/html/adminator3/templates>
         Require all denied
     </Directory>
     <Directory /var/www/html/adminator3/templates_c>
+        Require all denied
+    </Directory>
+    <Directory /var/www/html/adminator3/vendor>
         Require all denied
     </Directory>        
 </VirtualHost>
