clean-up static files and php class code (#61)

--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -18,16 +18,28 @@
         AllowOverride All
         Require all granted
     </Directory>
+    <Directory /var/www/html/adminator3/app>
+        Require all denied
+    </Directory>
+    <Directory /var/www/html/adminator3/include>
+        Require all denied
+    </Directory>
     <Directory /var/www/html/adminator3/smarty>
         Require all denied
     </Directory>
     <Directory /var/www/html/adminator3/models>
         Require all denied
     </Directory>
+    <Directory /var/www/html/adminator3/resources>
+        Require all denied
+    </Directory>
     <Directory /var/www/html/adminator3/templates>
         Require all denied
     </Directory>
     <Directory /var/www/html/adminator3/templates_c>
+        Require all denied
+    </Directory>
+    <Directory /var/www/html/adminator3/vendor>
         Require all denied
     </Directory>        
 </VirtualHost>
