--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -4,6 +4,12 @@
             "kylekatarnls/update-helper": true
         }
     },
+    "repositories": [
+        {
+            "url": "git@github.com:czhujer/slim-auth",
+            "type": "git"
+        }
+    ],
     "require": {
         "nette/robot-loader": "^3.4",
         "smarty/smarty": "^4.5.2",
@@ -18,7 +24,7 @@
         "doctrine/orm": "^2.19.0",
         "doctrine/annotations": "^1.14.0",
         "symfony/cache": "^5.4",
-        "marcelbonnet/slim-auth": "^2.0",
+        "czhujer/slim-auth": "dev-dev-master",
         "setasign/fpdf": "1.8.6"
     }
 }
