--- a/configs/apache2/vhosts/002-adminator3.conf
+++ b/configs/apache2/vhosts/002-adminator3.conf
@@ -9,8 +9,8 @@
 	CustomLog ${APACHE_LOG_DIR}/adminator/adminator3-access.log combined
 
     RewriteEngine on
-    RewriteRule   "/adminator2" "/" [R]
-    RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
+    # RewriteRule   "/adminator2" "/" [R]
+    # RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
     RedirectMatch ^/img/(.*\.(jpg|png|gif))$ /img2/$1
 
     <Directory /var/www/html/adminator3>
