--- a/configs/apache2/vhosts/001-adminator2.conf
+++ b/configs/apache2/vhosts/001-adminator2.conf
@@ -8,8 +8,8 @@
 	ErrorLog ${APACHE_LOG_DIR}/adminator/adminator2-error.log
 	CustomLog ${APACHE_LOG_DIR}/adminator/adminator2-access.log combined
     
-    RewriteEngine on
-    RewriteRule   "/adminator2" "/" [R]
+    # RewriteEngine on
+    # RewriteRule   "/adminator2" "/" [R]
     # RewriteRule   "/adminator2/(.*\.php)"  "/home.php" [R]
 
     <Directory /var/www/html/adminator2>
