--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,7 @@ extras/documentation
 /adminator2/files2/soubory/
 /adminator2/export/
 /adminator3/templates_c/
+/adminator3/export/objekty.xls
 
 adminator3/.php_cs.cache
 a3-logs/
-
-docker-compose.yml
-
-stb copy 2.php
