--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -13,13 +13,15 @@
     "require": {
         "nette/robot-loader": "^3.4",
         "smarty/smarty": "^4.5.2",
-        "slim/slim": "3.*",
-        "slim/twig-view": "^2.5.1",
-        "slim/csrf": "^0.8",
-        "slim/flash": "^0.4.0",
+        "slim/slim": "4.13.*",
+        "slim/psr7": "1.6.*",
+        "slim/twig-view": "^3.3",
+        "slim/csrf": "1.4",
+        "slim/flash": "0.4",
+        "pimple/pimple": "^3.5",
         "monolog/monolog": "^3.6.0",
         "respect/validation": "^2.2",
-        "formr/formr": "^1.4",
+        "formr/formr": "^1.5",
         "illuminate/database": "^8.83",
         "doctrine/orm": "^2.19.0",
         "doctrine/annotations": "^1.14.0",
