--- a/adminator2/composer.json
+++ b/adminator2/composer.json
@@ -4,6 +4,7 @@
         "smarty/smarty": "^4.5.2",
         "respect/validation": "^2.2",
         "formr/formr": "^1.4",
-        "illuminate/database": "^8.83"
+        "illuminate/database": "^8.83",
+        "phpmailer/phpmailer": "^6.9.1"
     }
 }
