--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -27,6 +27,7 @@
         "czhujer/slim-auth": "dev-dev-master",
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
-        "lloricode/laravel-html-table": "^2.1"
+        "lloricode/laravel-html-table": "^2.1",
+        "illuminate/pagination": "^10.48"
     }
 }
