--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -28,6 +28,7 @@
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
         "lloricode/laravel-html-table": "^2.1",
-        "illuminate/pagination": "^10.48"
+        "illuminate/pagination": "^10.48",
+        "evilfreelancer/routeros-api-php": "1.5.2"
     }
 }
