--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -23,10 +23,8 @@
         "respect/validation": "^2.2",
         "formr/formr": "^1.5",
         "illuminate/database": "^10.48",
-        "doctrine/orm": "^2.19.0",
-        "doctrine/annotations": "^1.14.0",
-        "symfony/cache": "^5.4",
-        "czhujer/slim-auth": "dev-dev-master",
+        "cartalyst/sentinel": "^v7.0",
+        "odan/session": "^6.1",
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
         "lloricode/laravel-html-table": "^2.1",
