--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -19,6 +19,7 @@
         "slim/csrf": "^1.4",
         "slim/flash": "^0.4.0",
         "php-di/php-di": "^7.0",
+        "php-di/slim-bridge": "^3.4",
         "monolog/monolog": "^3.6.0",
         "respect/validation": "^2.2",
         "formr/formr": "^1.5",
