fix sentinel stuff

--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -24,7 +24,9 @@
         "respect/validation": "^2.2",
         "formr/formr": "^1.5",
         "illuminate/database": "^10.48",
+        "illuminate/events": "^v10.0",
         "cartalyst/sentinel": "^v7.0",
+        "symfony/http-foundation": "^v6.4",
         "odan/session": "^6.1",
         "setasign/fpdf": "1.8.6",
         "phpmailer/phpmailer": "^6.9.1",
