--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -30,6 +30,8 @@
         "illuminate/database": "^10.48",
         "illuminate/events": "^v10.0",
         "cartalyst/sentinel": "^v7.0",
+        "nyholm/psr7": "^1.4.1",
+        "nyholm/psr7-server": "^1.0.2",
         "symfony/http-foundation": "^v6.4",
         "odan/session": "^6.1",
         "setasign/fpdf": "1.8.6",
