--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - /var/www/html/adminator3/temp:uid=33,gid=33
       # monolog + some scripts log files
       - /var/www/html/a3-logs:uid=33,gid=33
+      - /var/www/html/adminator2/log:uid=33,gid=33
       # adminator print
       - /var/www/html/adminator3/print/temp:uid=33,gid=33
       # adminator export xls
