--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - POSTGRES_DB=adminator.new
     volumes:
       - adminator-php-log:/var/log/php:uid=33,gid=33
-      - adminator-tmp:/tmp:
+      - adminator-tmp:/tmp:/tmp
     tmpfs:
       # apache logs
       - /var/log/apache2/adminator:uid=33,gid=33
