--- a/..github/workflows/ci-adminator3.yml
+++ b/..github/workflows/ci-adminator3.yml
@@ -6,8 +6,12 @@ on:
       - master
   pull_request:
 
+defaults:
+ run:
+  working-directory: ./adminator3
+
 jobs:
-  build:
+  basic-checks:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -34,10 +38,5 @@ jobs:
       - name: PHP-CS-Fixer
         uses: docker://ghcr.io/php-cs-fixer/php-cs-fixer:3-php8.3
           with:
-            args: |
-              check 
-              adminator3/app 
-              adminator3/boostrap
-              adminator3/config
-
+            args: check 
             # use `check .` if your repository not having paths configured in .php-cs-fixer[.dist].php
