--- a/..github/workflows/ci-adminator3.yml
+++ b/..github/workflows/ci-adminator3.yml
@@ -36,7 +36,10 @@ jobs:
       #   run: composer phpunit
 
       - name: PHP-CS-Fixer
-        uses: docker://ghcr.io/php-cs-fixer/php-cs-fixer:3-php8.3
-          with:
-            args: check 
-            # use `check .` if your repository not having paths configured in .php-cs-fixer[.dist].php
+        run: |
+          php \
+          vendor/friendsofphp/php-cs-fixer/php-cs-fixer \
+          check \
+          --show-progress=dots \
+          -v
+
