--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -47,7 +47,8 @@
         "phpstan/phpstan": "^1.4.2",
         "squizlabs/php_codesniffer": "*",
         "symfony/var-dumper": "^v6.0.2",
-        "symplify/easy-coding-standard": "^v12.1"
+        "symplify/easy-coding-standard": "^v12.1",
+        "symplify/coding-standard": "^v12.1"
     },
     "scripts": {
         "cleanup": [
