--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -62,6 +62,7 @@
         "rollback": "vendor/bin/phinx rollback -c config/phinx.php -e default --ansi -t 0",
         "phplint": "phplint --no-cache",
         "phpstan": "phpstan analyse",
+        "phpcbf": "phpcbf",
         "phpcs": "phpcs -s"
     }
 }
