--- a/.github/workflows/checks-adminator3.yml
+++ b/.github/workflows/checks-adminator3.yml
@@ -39,6 +39,7 @@ jobs:
       #   run: composer phpunit
 
       - name: PHP CodeSniffer
+        continue-on-error: true
         run: |
           composer \
           run \
