--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -46,7 +46,9 @@
         "overtrue/phplint": "^4.1.0",
         "phpstan/phpstan": "^1.4.2",
         "squizlabs/php_codesniffer": "*",
-        "symfony/var-dumper": "^v6.0.2"
+        "symfony/var-dumper": "^v6.0.2",
+        "symplify/easy-coding-standard": "^v12.1",
+        "symplify/coding-standard": "^v12.1"
     },
     "scripts": {
         "cleanup": [
@@ -60,6 +62,7 @@
         "rollback": "vendor/bin/phinx rollback -c config/phinx.php -e default --ansi -t 0",
         "phplint": "phplint --no-cache",
         "phpstan": "phpstan analyse",
+        "phpcbf": "phpcbf",
         "phpcs": "phpcs -s"
     }
 }
