--- a/.github/workflows/1.build-container.yml
+++ b/.github/workflows/1.build-container.yml
@@ -19,3 +19,9 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      -
+        name: Build
+        uses: docker/build-push-action@v5
+        with:
+          push: false
+          tags: hsoftware/isp-net-adminator:latest
