--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hsoftware/isp-net-adminator",
+    "name": "hsoftware/isp-net-adminator-a3",
     "type": "project",
     "homepage": "https://github.com/H-Software/isp-net-adminator",
     "license": "MIT",
@@ -61,7 +61,7 @@
         "migrate": "vendor/bin/phinx migrate -c config/phinx.php -e default --ansi",
         "rollback": "vendor/bin/phinx rollback -c config/phinx.php -e default --ansi -t 0",
         "phplint": "phplint --no-cache",
-        "phpstan": "phpstan analyse",
+        "phpstan": "vendor/phpstan/phpstan/phpstan.phar analyse",
         "phpcbf": "phpcbf",
         "phpcs": "phpcs -s"
     }
