--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": "^8.2",
         "nette/robot-loader": "^3.4",
         "smarty/smarty": "^4.5.2",
         "slim/slim": "4.13.*",
@@ -42,6 +43,7 @@
         "robmorgan/phinx": "^0.12.10"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.0",
         "friendsofphp/php-cs-fixer": "^v3.5.0",
         "overtrue/phplint": "^4.1.0",
         "phpstan/phpstan": "^1.4.2",
