--- a/.github/workflows/0.checks-adminator3.yml
+++ b/.github/workflows/0.checks-adminator3.yml
@@ -72,7 +72,6 @@ jobs:
       #           app
 
       - name: PHP-CS-Fixer
-        if: always()
         run: |
           php \
           vendor/friendsofphp/php-cs-fixer/php-cs-fixer \
@@ -90,3 +89,9 @@ jobs:
       - name: Run the tests
         if: always()
         run: composer run phpunit
+
+      - name: JUnit Report Action
+        if: always()
+        uses: mikepenz/action-junit-report@v4
+        with:
+          report_paths: 'adminator3/build/test-results/report-*.xml'
