--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -70,6 +70,6 @@
         "phpcs": "phpcs -s",
         "cs:check": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots --diff --dry-run",
         "cs:fix": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots",
-        "test": "./vendor/bin/phpunit --colors=always"
+        "test": "vendor/phpunit/phpunit/phpunit --colors=always"
     }
 }
