--- a/.github/workflows/0.checks-adminator3.yml
+++ b/.github/workflows/0.checks-adminator3.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Run the tests
         if: always()
-        run: composer run phpunit
+        run: composer run test
 
       - name: JUnit Report Action
         if: always()
