--- a/.github/workflows/0.checks-adminator3.yml
+++ b/.github/workflows/0.checks-adminator3.yml
@@ -91,12 +91,13 @@ jobs:
         if: always()
         run: composer run test
 
-      - name: check junit report
-        if: always()
-        run: ls -lh build
+      # - name: check junit report
+      #   if: always()
+      #   run: ls -lh build
 
       - name: JUnit Report Action
         if: always()
         uses: mikepenz/action-junit-report@v4
         with:
+          detailed_summary: true
           report_paths: 'adminator3/build/report.*.xml'
