--- a/.github/workflows/0.checks-adminator3.yml
+++ b/.github/workflows/0.checks-adminator3.yml
@@ -107,5 +107,5 @@ jobs:
         if: success() || failure()    # run this step even if previous step failed
         with:
           name: PHPUnit Tests            # Name of the check run which will be created
-          path: adminator3/build/report-*.xml    # Path to test results
+          path: build/report-*.xml    # Path to test results
           reporter: jest-junit        # Format of test results
