--- a/.github/workflows/0.checks-adminator3.yml
+++ b/.github/workflows/0.checks-adminator3.yml
@@ -108,4 +108,4 @@ jobs:
         with:
           name: PHPUnit Tests            # Name of the check run which will be created
           path: adminator3/build/report.*.xml    # Path to test results
-          reporter: jest-junit        # Format of test results
+          reporter: java-junit        # Format of test results
